force-app/main/default/objects/PM_Oauth_Token__c/PM_Oauth_Token__c.object-meta.xml
<CustomObject>
    <label>PM Oauth Token</label>
    <nameField>
        <displayFormat>OA-{00000000}</displayFormat>
        <label>PM Oauth Token Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Oauth Tokens</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>