force-app/main/default/objects/PM_Oauth_Token__c/PM_Oauth_Token__c.field-meta.xml
<CustomField>
    <fullName>PM_Oauth_Token__c</fullName>
    <label>PM Oauth Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>