force-app/main/default/objects/PM_Oauth_Token__c/fields/PM_Oauth_Token_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PM_Oauth_Token_Expiration_Date__c</fullName>
    <label>PM Oauth Token Expiration Date</label>
    <type>Date</type>
</CustomField>