force-app/main/default/objects/PM_Oauth_Token__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>User__c</columns>
    <columns>PM_Oauth_Token_Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>